// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoData render 1`] = `
<div>
  <div
    class="flex w-full min-w-0 flex-col items-center justify-center gap-4 rounded-xl border-dashed p-6 text-center text-balance min-h-24 flex-none"
    data-slot="empty"
    role="status"
  >
    <div
      class="text-sm/relaxed text-muted-foreground [&>a]:underline [&>a]:underline-offset-4 [&>a:hover]:text-primary"
      data-slot="empty-description"
    >
      没有数据
    </div>
  </div>
</div>
`;

exports[`NoData render with text 1`] = `
<div>
  <div
    class="flex w-full min-w-0 flex-col items-center justify-center gap-4 rounded-xl border-dashed p-6 text-center text-balance min-h-24 flex-none"
    data-slot="empty"
    role="status"
  >
    <div
      class="text-sm/relaxed text-muted-foreground [&>a]:underline [&>a]:underline-offset-4 [&>a:hover]:text-primary"
      data-slot="empty-description"
    >
      无数据
    </div>
  </div>
</div>
`;
